--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,5 @@
 body {
     font-family: "Poppins", sans-serif;
-    background-color: black;
     width: 100%;
     overflow-x: hidden;
 }
@@ -86,31 +85,47 @@ a {
     z-index: 1000;
 }
 
-.sidebar .list-unstyled li {
+.sidebar .list-unstyled li a {
     transition: 0.5s;
     padding: 5px 10px;
     border-radius: 8px;
 }
 
-.sidebar .list-unstyled li:hover {
+.sidebar .list-unstyled li a:hover {
     transform: translateX(20px);
-    background-color: white;
-    color: black !important;
-}
-
-.sidebar .list-unstyled li:hover a {
+    background-color: rgb(238, 126, 14);
     color: black !important;
 }
 
 .active {
     padding: 5px 10px;
     border-radius: 8px;
-    background-color: white;
+    background-color: rgb(238, 126, 14);
     color: black !important;
 }
 
 .Contact {
     height: 100vh;
+}
+
+.Contact input,
+.Search input {
+    border: none;
+    border-bottom: 3px solid orange;
+    background-color: transparent;
+    color: orange;
+}
+
+.Contact input::placeholder,
+.Search input::placeholder {
+    color: orange;
+}
+
+.Contact input:focus,
+.Search input:focus {
+    box-shadow: 0px 0px 0px 0.25rem orange;
+    background-color: transparent;
+    border: none;
 }
 
 
